# openobsw

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitpod  CMakeLists.txt  README.md  cmake.result  send_ping.py
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
.idx/: dev.nix
cmake/: aarch64-linux-gnu.cmake  aarch64-none-elf.cmake  msp430-toolchain.cmake  stm32h7-toolchain.cmake
contrib/svf_protocol/: obsw_svf_protocol.c  obsw_svf_protocol.h
contrib/svf_protocol/platform/: linux_stdio.c  zynqmp_uart.c
docs/: architecture.md  integration-guide.md  mission-config.md  msp430-build.md
include/obsw/: obsw.h
include/obsw/aocs/: adcs.h  bdot.h
include/obsw/ccsds/: space_packet.h  tc_frame.h  tm_frame.h
include/obsw/fdir/: fsm.h  watchdog.h
include/obsw/hal/: io.h
include/obsw/pus/: pus_tm.h  s1.h  s17.h  s20.h  s3.h  s5.h  s6.h  s8.h
include/obsw/tc/: dispatcher.h
include/obsw/tm/: store.h
include/obsw/util/: bytes.h
msp430-gcc-support-files/include/: msp430fr2355.h  msp430fr2355.ld  msp430fr2355_symbols.ld
renode/: msp430fr5969.repl  msp430fr5969.resc  sentinel.py  test_ping.py  test_ping_zynqmp.py  zynqmp_obsw.resc
scripts/: activate.sh  setup-workspace.sh
sim/: CMakeLists.txt  main.c  send_ping.py  sensor_inject.c  sensor_inject.h
src/: CMakeLists.txt  main.c
src/aocs/: adcs.c  bdot.c
src/ccsds/: space_packet.c  tc_frame.c  tm_frame.c
src/fdir/: fsm.c  watchdog.c
src/hal/arm/: trap_table_arm.c  trap_table_msp430.c
src/hal/msp430/: startup.c  uart.c
src/hal/stm32h7/: uart.c
src/hal/zynqmp/: uart.c
src/platform/stm32h7/: main.c  startup.S  stm32h750.ld
src/platform/zynqmp/: libc_shim.c  main.c  startup.S  zynqmp.ld
src/pus/: pus_tm.c  s1.c  s17.c  s20.c  s3.c  s5.c  s6.c  s8.c
src/tc/: dispatcher.c
src/tm/: store.c
srdb/: CMakeLists.txt  pyproject.toml
srdb/data/: events.yaml  hk_sets.yaml  parameters.yaml  spacecraft.yaml  telecommands.yaml
srdb/data/hardware/: gps_default.yaml  gps_novatel_oem7.yaml  gyro_default.yaml  mag_default.yaml  mtq_default.yaml  rw_default.yaml  rw_sinclair_rw003.yaml  thermal_default.yaml  thr_default.yaml  thr_moog_monarc_1.yaml
srdb/obsw_srdb/: __init__.py  codegen.py  csv_io.py  hardware.py  loader.py  model.py
srdb/obsw_srdb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
srdb/tests/: conftest.py  test_codegen.py  test_csv_io.py
targets/msp430-fr5969/: CMakeLists.txt  linker.ld  main.c
targets/stm32h7/: CMakeLists.txt
test/: CMakeLists.txt
test/integration/: test_tc_pipeline.c
test/unit/: test_adcs.c  test_bdot.c  test_dispatcher.c  test_fsm.c  test_s1.c  test_s17.c  test_s20.c  test_s3.c  test_s5.c  test_s5_fdir.c  test_s6.c  test_s8.c  test_space_packet.c  test_tc_frame.c  test_tm_frame.c  test_tm_store.c  test_watchdog.c
